# sf-scrapbook-helper

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  release_mac.sh  resp.out
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: release.yml
src/: backup.rs  config.rs  crawler.rs  login.rs  main.rs  message.rs  observer.rs  player.rs  server.rs
src/ui/: dungeon.rs  mod.rs  options.rs  scrapbook.rs  underworld.rs
