[package]
name = "sf-scrapbook-helper"
version = "0.2.1"
edition = "2021"


[dependencies]
ahash = "0.8"
async-compression = { version = "0.4", features = ["zlib"] }
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
fastrand = "2.0"
iced = { version = "0.12", features = ["tokio", "lazy", "image", "advanced"] }
iced_aw = { version = "0.8", default-features = false, features = [
    "number_input",
] }
image = { version = "0.25", default-features = false, features = ["ico", "webp"] }
indicatif = "0.17.8"
log = "0.4.21"
log4rs = { version = "1.3.0"}
nohash-hasher = "0.2"
open = "5.1"
reqwest = { version = "0.12", features = ["gzip", "deflate", "brotli"] }
semver = "1.0.22"
serde = "1.0"
serde_json = "1.0"
sf-api = { git = "https://github.com/the-marenga/sf-api", version = "0.1.2" }
titlecase = "3.0"
tokio = { version = "1.37", default-features = false, features = ["fs"] }
toml = "0.8"

[profile.release]
strip = true
lto = true

[build-dependencies]
winres = "0.1"
